fix: adjust nav bar items for letter-spacing

--- a/src/common/Header/NavBar/NavBar.module.scss
+++ b/src/common/Header/NavBar/NavBar.module.scss
@@ -37,17 +37,19 @@
   font-size: 20px;
   font-weight: bold;
   letter-spacing: 0.3em;
-  padding: var(--s1) var(--s3);
+  // Letter-spacing actually leaves behind a space at the end of the word so we
+  // add a padding-left the size of letter-spacing to have a centered underline.
+  padding: var(--s1) 0 var(--s1) 0.3em;
   text-decoration: none;
   text-transform: uppercase;
-
 }
 
 .ListItem {
-  padding: var(--s1) 0;
   background-position: left 100%;
   background-repeat: no-repeat;
   background-size: 0px 2px;
+  margin-left: var(--s5);
+  padding: var(--s1) 0;
   transition: all var(--transitionSpeed) var(--transitionTiming);
 }
 
